// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField component renders a field in error state 1`] = `
<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iwHglP-css"
      >
        <label
          class="c-jMiJvg c-jMiJvg-gvmVBy-size-md"
          for="INPUT FIELD"
        >
          INPUT FIELD
          <span
            class="c-fFGCSj"
          >
            *
          </span>
        </label>
      </div>
      <input
        class="c-dtikvq c-dtikvq-pHZal-size-md c-dtikvq-bXVTjQ-state-error"
        id="INPUT FIELD"
        name="INPUT FIELD"
        type="text"
      />
      <div
        class="c-dhzjXW c-dhzjXW-idXOPtz-css"
      >
        <svg
          aria-hidden="true"
          class="c-dBUxNn c-dBUxNn-kupcZn-size-sm c-dBUxNn-ihYlUBO-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 8v5"
          />
          <line
            x1="12"
            x2="12"
            y1="16"
            y2="16"
          />
          <circle
            cx="12"
            cy="12"
            r="10"
          />
        </svg>
        <p
          class="c-jwkyIg c-jwkyIg-bndJoy-size-sm c-jwkyIg-ikkBjHS-css"
        >
          This field is required
        </p>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`InputField component renders a field with a number input 1`] = `
<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV c-PJLV-ikLAKdM-css"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iwHglP-css"
      >
        <label
          class="c-jMiJvg c-jMiJvg-gvmVBy-size-md"
          for="INPUT FIELD"
        >
          INPUT FIELD
        </label>
      </div>
      <input
        class="c-dtikvq c-dtikvq-pHZal-size-md"
        id="INPUT FIELD"
        inputmode="numeric"
        name="INPUT FIELD"
        pattern="[0-9]*"
        placeholder="001"
        type="text"
      />
    </div>
  </form>
</div>
`;

exports[`InputField component renders a field with a text input 1`] = `
<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV c-PJLV-ikLAKdM-css"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iwHglP-css"
      >
        <label
          class="c-jMiJvg c-jMiJvg-gvmVBy-size-md"
          for="INPUT FIELD"
        >
          INPUT FIELD
        </label>
      </div>
      <input
        class="c-dtikvq c-dtikvq-pHZal-size-md"
        id="INPUT FIELD"
        name="INPUT FIELD"
        placeholder="INPUT FIELD"
        type="text"
      />
    </div>
  </form>
</div>
`;
